# voc-actionops

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
.github/workflows/: ai-worker-ci.yml  backend-ci.yml
ai-worker/: Dockerfile  pyproject.toml
ai-worker/app/: __init__.py  config.py  main.py  schemas.py
ai-worker/app/providers/: __init__.py  base.py  deterministic.py  openai_provider.py
ai-worker/tests/: conftest.py  test_api.py  test_config.py  test_deterministic_provider.py  test_openai_provider.py
backend/: build.gradle
backend/src/main/java/com/vocactionops/backend/: BackendApplication.java
backend/src/main/java/com/vocactionops/backend/config/: OpenApiConfig.java  SecurityConfig.java
backend/src/main/resources/: application-dev.yml  application-local.yml  application.yml
backend/src/main/resources/db/migration/: V1__create_organizations_and_users.sql  V2__create_datasets_and_feedbacks.sql  V3__create_dataset_validation_errors.sql  V4__create_feedback_analysis_and_ai_corrections.sql  V5__create_issues_issue_feedbacks_and_actions.sql  V6__create_refresh_tokens.sql  V7__create_analysis_jobs.sql
backend/src/test/java/com/vocactionops/backend/: BackendApplicationTests.java
backend/src/test/java/com/vocactionops/backend/analysis/: DatasetAnalysisJobIntegrationTests.java  FeedbackAnalysisIntegrationTests.java
backend/src/test/java/com/vocactionops/backend/auth/: AuthIntegrationTests.java
backend/src/test/resources/: application-test.yml
docs/: api.md  domain_model.md  erd.md  problem_definition.md  requirements.md
(+109 files in other folders)
